# src/controllers/ordersController.js
@@ -22,10 +22,27 @@ const createOrder = async (req, res) => {
 
 // ########################### Get ALL ORDERS ##############################
 const getAllOrders = async (req, res) => {
-  const result = await ordersServices.getAllOrders();
+  const result = await ordersServices.getAllOrders(req.user.id);
   return res
     .status(200)
     .json(response.successRes(200, success.ALL_ORDERS, result));
 };
 
-module.exports = { createOrder, getAllOrders };
+// ########################### Create Payments ##############################
+const orderPayment = async (req, res) => {
+  try {
+    const { order_id, payment_method_id } = req.body;
+    const result = await ordersServices.orderPayment(
+      order_id,
+      payment_method_id,
+    );
+
+    return res
+      .status(200)
+      .json(response.successRes(200, success.PAYMENT_COMPLETE));
+  } catch (err) {
+    return res.status(400).json(response.errorRes(400, error.message));
+  }
+};
+
+module.exports = { createOrder, getAllOrders, orderPayment };
